--- a/demo_mnist.ipynb
+++ b/demo_mnist.ipynb
@@ -1067,7 +1067,7 @@
     "base_net = 'mnist_net'\n",
     "class_num = [5,2]\n",
     "\n",
-    "model_instance = SHMD(base_net_sha=base_net,\\\n",
+    "model_instance = MUD(base_net_sha=base_net,\\\n",
     "                    width=width, use_gpu=True, class_num=class_num,\\\n",
     "                    max_iter=max_iter, alpha=10., \\\n",
     "                    low_value=0., high_value=1.,\\\n",
