--- a/demo_dbbhm.ipynb
+++ b/demo_dbbhm.ipynb
@@ -145,7 +145,7 @@
     "base_net = 'dbbhm_net'\n",
     "class_num = [4,5]\n",
     "\n",
-    "model_instance = SHMD(base_net_sha=base_net,\\\n",
+    "model_instance = MUD(base_net_sha=base_net,\\\n",
     "                    width=width, use_gpu=True, class_num=class_num,\\\n",
     "                    max_iter=max_iter, alpha=10., \\\n",
     "                    low_value=0., high_value=1.,\\\n",
